--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Speed up a box packing chain",
   "main": "index.js",
   "scripts": {
+    "pack": "node index.js",
     "test": "jest --watchAll"
   },
   "repository": {
@@ -25,5 +26,8 @@
   },
   "eslintConfig": {
     "extends": "@nico29"
+  },
+  "dependencies": {
+    "commander": "^2.12.1"
   }
 }
