:sparkles: - Add prepush hook to validate code

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "test:integration": "jest --watchAll",
     "lint": "eslint src/ index.js",
-    "doc": "jsdoc --readme README.md -d docs src/ index.js"
+    "build-doc": "jsdoc --readme README.md -d docs src/ index.js",
+    "prepush": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "@nico29/eslint-config": "^1.0.1",
     "@types/jest": "^21.1.8",
     "eslint": "^4.11.0",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
     "jsdoc": "^3.5.5"
   },
